Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110068

qmake: Generated Visual Studio project defaults "GenerateDebugInformation" to "false"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 5.15.13, 6.2.8, 6.4.3, 6.5.0, 6.6.0
    • 6.4.1, 6.4.2
    • Build tools: qmake
    • None
    • Windows 11, Visual Studio 17.4.1, Qt 6.4.2
    • Windows
    • 0e3ef4111 (dev), 947aeb02b (tqtc/lts-6.2), 2d52076b2 (6.5), 934735822 (6.4), be490f1ac (tqtc/lts-5.15)

      It seems when generating vcxproj with CONFIG += debug_and_release, the generated project will always have "GenerateDebugInformation" set to "false" even for the Debug configuration.

      Steps to reproduce:
      1. Create a .pro file with following content:

          TARGET = test
          TEMPLATE = lib
          CONFIG += debug_and_release
      

      2. Generate vcxproj using following command:

      qmake.exe -tp vc test.pro -o test.vcxproj
      

      Inspect the output test.vcxproj for <GenerateDebugInformation> xml tag value. It will be "false" for both Release and Debug Configuration.

      In our case we were using the force_debug_info (CONFIG += debug_and_release force_debug_info) and expecting to have debug information generated in Release configuration as well. That didn't work either.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semlanik Alexey Edelev
            uggas Harbinder Saggu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: